<resources>
    <string name="app_name">AmberCard</string>
    <string name="empty_login">Введите Ваш логин</string>
    <string name="empty_password">Введите Ваш пароль</string>
    <string name="logo">logo</string>
    <string name="logo_description">Скидки и акции для гостей\nКалининградской области</string>
    <string name="login">Ваш логин:</string>
    <string name="pass">Ваш пароль:</string>
    <string name="login_submit">Войти</string>
    <string name="login_or_password_not_match">Пользователь с таким логином или паролем не найден</string>
    <string name="network_error">Проверьте подключение к интернету</string>
    <string name="title_activity_place_list">PlaceListActivity</string>
    <string name="btn_filter">Фильтровать места</string>
    <string name="wft">Что-то пошло не так... Попробуйте позже.</string>
    <string name="empty_list">Мы ничего не нашли. Попробуйте обновить.</string>
    <string name="preview">preview</string>
    <string name="back">button back</string>
    <string name="gallery">button gallery</string>
    <string name="defaults_phone">Нет информации</string>
    <string name="defaults_distance">Мы ищем вас. Подождите.</string>
    <string name="close">close</string>
    <string name="preference_file_key">ru.rougsig.ambercard.pref</string>
    <string name="discount_card">disctount card</string>
    <string name="no_info_place_list">Мы не нашли, хороших мест. Попробуйте позже.</string>
    <string name="refresh">Обновить</string>
</resources>
