<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ru.rougsig.ambercard.features.user.LoginActivityVM" />
    </data>

    <!-- Немного поменял отступы чтобы, не было дырки снизу. -->
    <!-- Да и вообще оно кривое, надо поправить. -->
    <!-- TODO Идем делать PP -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            style="@style/Title.Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="33dp"
            android:text="@string/app_name"
            android:textAlignment="center" />

        <TextView
            style="@style/Text.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:text="@string/app_name_description" />

        <EditText
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:hint="@string/login" />

        <EditText
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/pass"
            android:inputType="textPassword" />

        <Button
            style="@style/Btn.Red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/login_submit" />

    </LinearLayout>

</layout>