<?xml version="1.0" encoding="utf-8"?>

<!-- Немного поменял отступы чтобы, не было дырки снизу. -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--TODO: На малеьнком экране войти не получится. Не будет кнопок и полей. В ланшафте тоже.-->

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            style="@style/Title.Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/app_name"
            android:textAlignment="center" />

        <TextView
            style="@style/Text.Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/logo_description"
            android:textAlignment="center" />

        <!--С одного текстового поля нельзя перескочить на другое, используя клавиатуру, ровно как и на кнопку. Добавь imeOptions-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login"
                style="@style/Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                style="@style/Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/Btn.Red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_submit" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>